home and about section created

--- a/index.html
+++ b/index.html
@@ -36,6 +36,33 @@
         </nav>
     </header>
     <main>
+        <section id="home">
+        <div class="home__section">
+            <div class="home__container">
+                <h1 class="home__heading">Choose your <span>colors</span> </h1>
+                <p class="home__desc">Unlimited Possibilities</p>
+                <div class="explore__btn"><a href="#" id="explore__link">Explore</a></div>
+            </div>
+        </div>
+        </section>
+        <section id="about">
+            <div class="about__section">
+                <div class="about__container">
+                    <div class="about__section__image">
+                        <div class="image__symbol">
+
+                        </div>
+                    </div>
+                    <div class="about__section__content">
+                        <h1 class="about__heading1">WHAT DO WE DO ?</h1>
+                        <h2 class="about__heading2">We help bussiness scale</h2>
+                        <p class="about__para">Schedule a call to learn more about our services</p>
+                        <div class="call__btn"><a href="#" id="call__link">Schedule call</a></div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <script src="script.js">
