some more changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav__bar">
             <div class="navbar__container">
-                <a id="navbar__logo" href="#home" >Paint</a>
+                <a id="navbar__logo" href="#home" >GYM</a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -29,7 +29,7 @@
                         <a href="#services" class="navbar__links" id="services-page">Services</a>
                     </li>
                     <li class="navbar__btn">
-                        <a href="#sign-up" class="button" id="signup">Sign Up</a>
+                        <a href="#sign-up" class="button" id="signup">Register</a>
                     </li>
                 </ul>
             </div>
@@ -39,7 +39,7 @@
         <section id="home">
         <div class="home__section">
             <div class="home__container">
-                <h1 class="home__heading">Choose your <span>colors</span> </h1>
+                <h1 class="home__heading">Choose your <span>courses</span> </h1>
                 <p class="home__desc">Unlimited Possibilities</p>
                 <div class="explore__btn"><a href="#" id="explore__link">Explore</a></div>
             </div>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="about__section__content">
                         <h1 class="about__heading1">WHAT DO WE DO ?</h1>
-                        <h2 class="about__heading2">We help bussiness scale</h2>
+                        <h2 class="about__heading2">We help health scale</h2>
                         <p class="about__para">Schedule a call to learn more about our services</p>
                         <div class="call__btn"><a href="#" id="call__link">Schedule call</a></div>
 
