--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bussiness</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -50,7 +51,7 @@
                 <div class="about__container">
                     <div class="about__section__image">
                         <div class="image__symbol">
-
+                            <i class="fas fa-dumbbell"></i>
                         </div>
                     </div>
                     <div class="about__section__content">
