--- a/index.html
+++ b/index.html
@@ -64,6 +64,37 @@
                 </div>
             </div>
         </section>
+        <!-- services section -->
+        <section id="services">
+            <div class="service__section">
+                <h1 class="service__heading">Our services</h1>
+                <div class="service__container">
+                    <div class="service__card">
+                        <h2>Service name</h2>
+                        <p>service desc</p>
+                        <button type="buttom" class="get__started">Get Started</button>
+                    </div>
+
+                    <div class="service__card">
+                        <h2>Service name</h2>
+                        <p>service desc</p>
+                        <button type="buttom" class="get__started">Get Started</button>
+                    </div>
+
+                    <div class="service__card">
+                        <h2>Service name</h2>
+                        <p>service desc</p>
+                        <button type="buttom" class="get__started">Get Started</button>
+                    </div>
+
+                    <div class="service__card">
+                        <h2>Service name</h2>
+                        <p>service desc</p>
+                        <button type="buttom" class="get__started">Get Started</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <script src="script.js">
