service section gradient added

--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
                 <h1 class="service__heading">Our services</h1>
                 <div class="service__container">
                     <div class="service__card">
-                        <h2>Service name</h2>
+                        <h2>YOGA CLASSES</h2>
                         <p>service desc</p>
                         <button type="buttom" class="get__started">Get Started</button>
                     </div>
 
                     <div class="service__card">
-                        <h2>Service name</h2>
+                        <h2>AEROBICS CLASSES</h2>
                         <p>service desc</p>
                         <button type="buttom" class="get__started">Get Started</button>
                     </div>
 
                     <div class="service__card">
-                        <h2>Service name</h2>
+                        <h2>PERSONAL TRAINING</h2>
                         <p>service desc</p>
                         <button type="buttom" class="get__started">Get Started</button>
                     </div>
 
                     <div class="service__card">
-                        <h2>Service name</h2>
+                        <h2>Steam & Sauna rooms</h2>
                         <p>service desc</p>
                         <button type="buttom" class="get__started">Get Started</button>
                     </div>
