signup section completed

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bussiness</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+        integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
+
 <body>
     <header>
         <nav class="nav__bar">
             <div class="navbar__container">
-                <a id="navbar__logo" href="#home" >GYM</a>
+                <a id="navbar__logo" href="#home">GYM</a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
-                    
+
                 </div>
                 <ul class="navbar__menu" id="test">
                     <li class="navbar__item">
@@ -38,13 +41,13 @@
     </header>
     <main>
         <section id="home">
-        <div class="home__section">
-            <div class="home__container">
-                <h1 class="home__heading">Choose your <span>courses</span> </h1>
-                <p class="home__desc">Unlimited Possibilities</p>
-                <div class="explore__btn"><a href="#" id="explore__link">Explore</a></div>
+            <div class="home__section">
+                <div class="home__container">
+                    <h1 class="home__heading">Choose your <span>courses</span> </h1>
+                    <p class="home__desc">Unlimited Possibilities</p>
+                    <div class="explore__btn"><a href="#" id="explore__link">Explore</a></div>
+                </div>
             </div>
-        </div>
         </section>
         <section id="about">
             <div class="about__section">
@@ -96,9 +99,31 @@
             </div>
         </section>
 
+        <section id="sign-up">
+            <div class="about__section">
+                <div class="about__container">
+                    <div class="about__section__content">
+                        <h1 class="about__heading1">JOIN OUR TEAM</h1>
+                        <h2 class="about__heading2">SIGN UP TODAY</h2>
+                        <p class="about__para">
+                            See what makes up difference
+                        </p>
+                        <div class="call__btn"><a href="#" id="call__link">Register Now</a>
+                        </div>
+                    </div>
+                    <div class="about__section__image">
+                        <div class="image__symbol">
+                            <i class="fas fa-users"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <script src="script.js">
 
     </script>
 </body>
+
 </html>
