--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
         </section>
 
         <section id="sign-up">
-            <div class="about__section">
-                <div class="about__container">
-                    <div class="about__section__content">
-                        <h1 class="about__heading1">JOIN OUR TEAM</h1>
-                        <h2 class="about__heading2">SIGN UP TODAY</h2>
-                        <p class="about__para">
+            <div class="sign__section">
+                <div class="sign__container">
+                    <div class="sign__section__content">
+                        <h1 class="sign__heading1">JOIN OUR TEAM</h1>
+                        <h2 class="sign__heading2">SIGN UP TODAY</h2>
+                        <p class="sign__para">
                             See what makes up difference
                         </p>
-                        <div class="call__btn"><a href="#" id="call__link">Register Now</a>
+                        <div class="register__btn"><a href="#" id="register__link">Register Now</a>
                         </div>
                     </div>
                     <div class="about__section__image">
